1. 增加文件永久下载接口; 2. 增加objectKey/chunkSize/chunkCount字段, 用于分片上传
