# controller/openapi.yaml
@@ -76,6 +76,12 @@ components:
         metadata:
           type: object
           additionalProperties: true
+        objectKey:
+          type: string
+        chunkSize:
+          type: number
+        chunkCount:
+          type: number
     UploadFileMetadata:
       type: object
       properties:
@@ -153,6 +159,9 @@ paths:
                 bucket-id:
                   type: string
                   description: Bucket to upload the files to
+                object-prefix:
+                  type: string
+                  description: append prefix to upload files
                 metadata[]:
                   type: array
                   description: (Optional) Set the following metadata for the uploaded files instead of letting the server do it automatically. See "UploadFileMetadata".
@@ -527,6 +536,156 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+
+  /files/{id}/download/{name}:
+    get:
+      summary: Retrieve contents of file
+      description: Retrieve contents of file
+      tags:
+        - storage
+      security:
+        - Authorization: []
+      parameters:
+        - name: id
+          required: true
+          in: path
+          schema:
+            type: string
+        - name: name
+          required: true
+          in: path
+          schema:
+            type: string
+        - name: token
+          required: true
+          in: query
+          schema:
+            type: string
+        - name: if-match
+          description: https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/If-Match
+          in: header
+          schema:
+            type: string
+        - name: if-none-match
+          description: https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/If-None-Match
+          in: header
+          schema:
+            type: string
+        - name: if-modified-since
+          description: https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/If-Modified-Since
+          in: header
+          schema:
+            type: string
+        - name: if-unmodified-since
+          description: https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/If-Unmodified-Since
+          in: header
+          schema:
+            type: string
+        - name: q
+          description: Quality of the image. Only applies to jpeg, webp and png files
+          in: query
+          schema:
+            type: number
+        - name: h
+          description: Resize image up to h maintaining aspect ratio. Only applies to jpeg, webp and png files
+          in: query
+          schema:
+            type: number
+        - name: w
+          description: Resize image up to w maintaining aspect ratio. Only applies to jpeg, webp and png files
+          in: query
+          schema:
+            type: number
+        - name: b
+          description: Blur the image according to this sigma value. Only applies to jpeg, webp and png files
+          in: query
+          schema:
+            type: number
+      responses:
+        '200':
+          description: File gathered successfully
+          headers:
+            Cache-Control:
+              description: https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Cache-Control
+              schema:
+                type: string
+            Content-Length:
+              description: https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Content-Length
+              schema:
+                type: number
+            Content-Type:
+              description: https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Content-Type
+              schema:
+                type: string
+            Etag:
+              description: https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Etag
+              schema:
+                type: string
+            Last-Modified:
+              description: https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Last-Modified
+              schema:
+                type: string
+          content:
+            application/octet-stream: {}
+        '304':
+          description: |
+            File hasn't been modified based on:
+            - file modification time is older than If-Modified-Since
+          headers:
+            Cache-Control:
+              description: https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Cache-Control
+              schema:
+                type: string
+            Content-Length:
+              description: https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Content-Length
+              schema:
+                type: number
+            Content-Type:
+              description: https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Content-Type
+              schema:
+                type: string
+            Etag:
+              description: https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Etag
+              schema:
+                type: string
+            Last-Modified:
+              description: https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Last-Modified
+              schema:
+                type: string
+        '412':
+          description: |
+            Some of the conditions specified in the headers failed to match. For instance:
+              - etag doesn't match one of If-Match
+              - etag matches one of If-None-Match
+              - if-unmodified-since is false
+          headers:
+            Cache-Control:
+              description: https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Cache-Control
+              schema:
+                type: string
+            Content-Length:
+              description: https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Content-Length
+              schema:
+                type: number
+            Content-Type:
+              description: https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Content-Type
+              schema:
+                type: string
+            Etag:
+              description: https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Etag
+              schema:
+                type: string
+            Last-Modified:
+              description: https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Last-Modified
+              schema:
+                type: string
+        default:
+          description: Some error occurred
+          headers:
+            X-Error:
+              description: An error message
+              schema:
+                type: string
 
   /files/{id}/presignedurl:
     get:
